[gd_scene load_steps=7 format=2]

[ext_resource path="res://src/screen/icons/icon.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/theme/screen.tres" type="Theme" id=2]
[ext_resource path="res://assets/screen/icons/mail-forward.png" type="Texture" id=3]
[ext_resource path="res://assets/screen/icons/mail-reply-sender.png" type="Texture" id=4]
[ext_resource path="res://src/screen/windows/EmailGame.gd" type="Script" id=5]
[ext_resource path="res://assets/theme/grey_panel.png" type="Texture" id=6]

[node name="EmailGame" type="HBoxContainer"]
self_modulate = Color( 0.705882, 0.705882, 0.705882, 1 )
margin_top = 32.0
margin_right = 524.0
margin_bottom = 302.0
theme = ExtResource( 2 )
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="mail_headings" type="ItemList" parent="."]
margin_right = 200.0
margin_bottom = 270.0
rect_min_size = Vector2( 200, 270 )

[node name="mail_content" type="VBoxContainer" parent="."]
margin_left = 204.0
margin_right = 524.0
margin_bottom = 270.0
custom_constants/separation = 6

[node name="Control" type="Control" parent="mail_content"]
margin_right = 320.0

[node name="NinePatchRect" type="NinePatchRect" parent="mail_content"]
self_modulate = Color( 0.707031, 0.707031, 0.707031, 1 )
margin_top = 6.0
margin_right = 320.0
margin_bottom = 56.0
rect_min_size = Vector2( 320, 50 )
texture = ExtResource( 6 )
patch_margin_left = 18
patch_margin_top = 12
patch_margin_right = 11
patch_margin_bottom = 18

[node name="HBoxContainer" type="HBoxContainer" parent="mail_content/NinePatchRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -150.0
margin_top = -21.0
margin_right = 150.0
margin_bottom = 15.0
rect_min_size = Vector2( 0, 32 )
custom_constants/separation = 24
__meta__ = {
"_edit_use_anchors_": false
}

[node name="reply" parent="mail_content/NinePatchRect/HBoxContainer" instance=ExtResource( 1 )]
margin_bottom = 36.0
texture_normal = ExtResource( 4 )
identity = "REPLY"
icon_texture = ExtResource( 4 )

[node name="Label" parent="mail_content/NinePatchRect/HBoxContainer/reply" index="1"]
text = "Reply"

[node name="forward" parent="mail_content/NinePatchRect/HBoxContainer" instance=ExtResource( 1 )]
margin_left = 56.0
margin_right = 88.0
margin_bottom = 36.0
texture_normal = ExtResource( 3 )
identity = "FORWARD"
icon_texture = ExtResource( 3 )

[node name="Label" parent="mail_content/NinePatchRect/HBoxContainer/forward" index="1"]
text = "Forward"

[node name="VBoxContainer" type="VBoxContainer" parent="mail_content/NinePatchRect/HBoxContainer"]
margin_left = 112.0
margin_right = 259.0
margin_bottom = 36.0

[node name="from_label" type="Label" parent="mail_content/NinePatchRect/HBoxContainer/VBoxContainer"]
margin_right = 147.0
margin_bottom = 15.0
rect_min_size = Vector2( 0, 15 )
text = "FROM"
valign = 2

[node name="from" type="Label" parent="mail_content/NinePatchRect/HBoxContainer/VBoxContainer"]
margin_top = 19.0
margin_right = 147.0
margin_bottom = 34.0
text = "The Office of the CEO"

[node name="label" type="NinePatchRect" parent="mail_content"]
self_modulate = Color( 0.705882, 0.705882, 0.705882, 1 )
margin_top = 62.0
margin_right = 320.0
margin_bottom = 87.0
rect_min_size = Vector2( 0, 25 )
texture = ExtResource( 6 )
patch_margin_left = 14
patch_margin_top = 12
patch_margin_right = 14
patch_margin_bottom = 11

[node name="Label" type="Label" parent="mail_content/label"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -150.0
margin_top = -12.5
margin_right = 150.0
margin_bottom = 12.5
rect_min_size = Vector2( 300, 20 )
text = "REMINDER TO ALL EMPLOYEES"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="content" type="NinePatchRect" parent="mail_content"]
self_modulate = Color( 0.705882, 0.705882, 0.705882, 1 )
margin_top = 93.0
margin_right = 320.0
margin_bottom = 268.0
rect_min_size = Vector2( 320, 175 )
texture = ExtResource( 6 )
patch_margin_left = 16
patch_margin_top = 14
patch_margin_right = 17
patch_margin_bottom = 17

[node name="Content" type="RichTextLabel" parent="mail_content/content"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -152.0
margin_top = -79.5
margin_right = 150.0
margin_bottom = 80.5
rect_min_size = Vector2( 300, 160 )
text = "Employees are required to wear their Augumented Reality (AR) glasses at all times. Failure to wear your AR will lead to disciplinary action up to termination of employment."
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="item_selected" from="mail_headings" to="." method="_on_mail_headings_item_selected"]

[editable path="mail_content/NinePatchRect/HBoxContainer/reply"]
[editable path="mail_content/NinePatchRect/HBoxContainer/forward"]
